test_suite/tests/compile_fail/invalid_serde_attr.rs

#[derive(serde_unstructured::SerdeView)]
struct Data {
    #[serde(what)]
    field: u8,
}

fn main() {}