test_suite/tests/compile_fail/invalid_serde_attr.stderr
error: `SerdeView` failed at `serde` attribute: unknown serde field attribute `what`

         = help: skip a field using a `#[serde_view(skip)]` attribute or use an empty `#[serde_view()]` attribute to ignore any `#[serde]` attributes.

 --> tests/compile_fail/invalid_serde_attr.rs:4:13
  |
4 |     #[serde(what)]
  |             ^^^^
